--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>MERN CRUD</title>
+    <title>Student Tracker</title>
 
     <link
       rel="stylesheet"
